# s2geometry_capi

./: .gitignore  CMakeLists.txt  README.md
cmake/: s2cConfig.cmake.in
examples/: CMakeLists.txt  polygon_operations.c  simple_polygon_test.c
include/: s2c.h
src/: s2c.cpp
tests/: CMakeLists.txt  test_basic_types.cc  test_boolean_operations.c  test_geometry_types.cc  test_runner.c  test_utilities.cc
